--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.config.import=optional:configserver:http://localhost:7045
 
 spring.profiles.active=dev
 spring.cloud.config.profile=dev
+
+spring.security.oauth2.resourceserver.auth.uri=http://locahost:8080
